src/styles/elements/_blog-sidebar.css
.blog-sidebar {
    --blog-sidebar-width: var(--content-width-with-padding);
    --blog-sidebar-max-width: var(--content-wide-max-width);
    --blog-sidebar-margin: var(--spacing-between-consecutive-elements-normal) auto 0;
    --blog-sidebar-display: grid;
    --blog-sidebar-grid-template-columns: 1fr;
    --blog-sidebar-grid-template-areas:
        "posts"
        "categories"
        "tags"
        "comments"
        "archive";
    --blog-sidebar-grid-gap: var(--content-spacing-between-columns);
    --blog-sidebar-font-family: var(--font-family-text);
    --blog-sidebar-font-size: var(--font-size-normal);
    --blog-sidebar-color: var(--color-font);

    --blog-sidebar-column-posts-grid-area: posts;

    --blog-sidebar-column-categories-grid-area: categories;

    --blog-sidebar-column-tags-grid-area: tags;

    --blog-sidebar-column-comments-grid-area: comments;

    --blog-sidebar-column-archive-grid-area: archive;

    --blog-sidebar-post-link-display: grid;
    --blog-sidebar-post-link-grid-template-columns: auto 1fr;
    --blog-sidebar-post-link-grid-gap: var(--spacing-normal);
    --blog-sidebar-post-link-border: var(--border-width-normal) solid var(--border-color-default);
    --blog-sidebar-post-link-padding: var(--spacing-normal) 0;
    --blog-sidebar-post-link-text-decoration: none;

    --blog-sidebar-post-link-icon-position: relative;
    --blog-sidebar-post-link-icon-top: var(--spacing-xxs);

    --blog-sidebar-categories-display: flex;
    --blog-sidebar-categories-flex-wrap: wrap;
    --blog-sidebar-categories-flex-direction: row;
    --blog-sidebar-categories-gap: var(--spacing-s);

    --blog-sidebar-category-link-text-decoration: none;

    --blog-sidebar-tags-display: flex;
    --blog-sidebar-tags-flex-wrap: wrap;
    --blog-sidebar-tags-flex-direction: row;
    --blog-sidebar-tags-gap: var(--spacing-s);

    --blog-sidebar-tag-link-text-decoration: none;


    --blog-sidebar-comment-display: grid;
    --blog-sidebar-comment-grid-template-columns: auto 1fr;
    --blog-sidebar-comment-grid-gap: var(--spacing-normal);
    --blog-sidebar-comment-border: var(--border-width-normal) solid var(--border-color-default);
    --blog-sidebar-comment-padding: var(--spacing-normal) 0;

    --blog-sidebar-comment-text-margin: 0;

    --blog-sidebar-post-comment-position: relative;
    --blog-sidebar-post-comment-icon-top: var(--spacing-xs);

    --blog-sidebar-comment-data-margin: var(--spacing-s) 0 0;

    width: var(--blog-sidebar-width);
    max-width: var(--blog-sidebar-max-width);
    margin: var(--blog-sidebar-margin);
    display: var(--blog-sidebar-display);
    grid-template-columns: var(--blog-sidebar-grid-template-columns);
    grid-template-areas: var(--blog-sidebar-grid-template-areas);
    grid-gap: var(--blog-sidebar-grid-gap);
    font-family: var(--blog-sidebar-font-family);
    font-size: var(--blog-sidebar-font-size);
    color: var(--blog-sidebar-color);
}

.blog-sidebar__column[column-type="posts"] {
    grid-area: var(--blog-sidebar-column-posts-grid-area);
}

.blog-sidebar__column[column-type="categories"] {
    grid-area: var(--blog-sidebar-column-categories-grid-area);
}

.blog-sidebar__column[column-type="tags"] {
    grid-area: var(--blog-sidebar-column-tags-grid-area);
}

.blog-sidebar__column[column-type="comments"] {
    grid-area: var(--blog-sidebar-column-comments-grid-area);
}

.blog-sidebar__column[column-type="archive"] {
    grid-area: var(--blog-sidebar-column-archive-grid-area);
}

.blog-sidebar__post-link {
    display: var(--blog-sidebar-post-link-display);
    grid-template-columns: var(--blog-sidebar-post-link-grid-template-columns);
    grid-gap: var(--blog-sidebar-post-link-grid-gap);
    border-bottom: var(--blog-sidebar-post-link-border);
    padding: var(--blog-sidebar-post-link-padding);
    text-decoration: var(--blog-sidebar-post-link-text-decoration);
}

.blog-sidebar__post-link:first-child {
    border-top: var(--blog-sidebar-post-link-border);
}

.blog-sidebar__post-link .icon {
    position: var(--blog-sidebar-post-link-icon-position);
    top: var(--blog-sidebar-post-link-icon-top);
}

.blog-sidebar__categories {
    display: var(--blog-sidebar-categories-display);
    flex-wrap: var(--blog-sidebar-categories-flex-wrap);
    flex-direction: var(--blog-sidebar-categories-flex-direction);
    gap: var(--blog-sidebar-categories-gap);
}

.blog-sidebar__category-link {
    text-decoration: var(--blog-sidebar-category-link-text-decoration);
}

.blog-sidebar__tags {
    display: var(--blog-sidebar-tags-display);
    flex-wrap: var(--blog-sidebar-tags-flex-wrap);
    flex-direction: var(--blog-sidebar-tags-flex-direction);
    gap: var(--blog-sidebar-tags-gap);
}

.blog-sidebar__tag-link {
    text-decoration: var(--blog-sidebar-tag-link-text-decoration);
}

.blog-sidebar__comment {
    display: var(--blog-sidebar-comment-display);
    grid-template-columns: var(--blog-sidebar-comment-grid-template-columns);
    grid-gap: var(--blog-sidebar-comment-grid-gap);
    padding: var(--blog-sidebar-comment-padding);
    border-bottom: var(--blog-sidebar-comment-border);
}

.blog-sidebar__comment:first-child {
    border-top: var(--blog-sidebar-comment-border);
}

.blog-sidebar__comment .icon {
    position: var(--blog-sidebar-post-comment-position);
    top: var(--blog-sidebar-post-comment-icon-top);
}

.blog-sidebar__comment-text {
    margin: var(--blog-sidebar-comment-text-margin);
}

.blog-sidebar__comment-data {
    margin: var(--blog-sidebar-comment-data-margin);
}

@media screen and (min-width: 840px) {
    .blog-sidebar {
        --blog-sidebar-grid-template-columns: repeat(4, minmax(20%, auto));
        --blog-sidebar-grid-template-areas:
            "posts categories comments archive"
            "posts tags comments archive";
    }
}

